--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,132 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'Bungee Spice';
+  src: local('Bungee Spice'), url('./fonts/BungeeSpice-Regular.ttf') format('truetype');
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: 'Jost';
+  src: local('Jost'), url('./fonts/Jost-Regular.ttf') format('truetype');
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: 'Honk';
+  src: local('Honk'), url('./fonts/Honk-Regular.ttf') format('truetype');
 }
-
-.App-header {
-  background-color: #282c34;
+.app-container {
+  
   min-height: 100vh;
+  background-color: #121212;
+}
+
+.white-rectangle {
+  background-color: #404040;
+  border-radius: 20px;
+  padding: 20px;
+  width: 80%; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+  transition: margin 0.8s ease;
+  
+}
+
+h1{
+  color: #ffffff;
+  font-family: 'Honk';
+  font-size: 40px;
+}
+
+.top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #212124; 
+  color: #fff; 
+  padding: 10px 20px; 
+  height: 15vh;
+}
+
+.sidebar {
+  width: 200px;
+  height: 100vh;
+  background-color: #181818; 
+  color: #fff; 
+  padding: 0px 20px 0px 20px; 
+  transition: transform 0.7s ease;
+}
+
+
+.sidebar button,select{
+  display: block;
+  width: 100%;
+  height: 60px;
+  border-radius: 20px;
+  padding: 10px 20px; 
+  margin-top: 20px; 
+  background-color: #282828; 
+  color: #fff; 
+  border: none; 
+  cursor: pointer; 
+  text-align: center;
+  font-family: 'Honk';
+  font-size: 20px;
+}
+.sidebar button:hover {
+  background-color: #404040; 
+}
+.sidebar button:last-child:hover {
+  background-color: #b1b1b1; 
+}
+
+
+.main-content {
+  display: flex; 
+  
+}
+
+
+.schedule-container {
+  flex: 1;
+  padding: 20px; 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 99vh;
 }
 
-.App-link {
-  color: #61dafb;
+
+.show-sidebar .sidebar {
+  width: 200px; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.hide-sidebar .sidebar {
+  transform: translateX(-250px);
+}
+
+.hide-sidebar .white-rectangle {
+  margin-left: -240px; 
+  
+}
+
+
+.show-sidebar .schedule-container {
+  flex: 1; 
+  
+}
+
+
+.hide-sidebar .schedule-container {
+  flex: 1;
+  padding-left: 0; 
+  padding-right: 0;
+  
+}
+#changetext{
+  padding: 0px;
+  font-family: 'Jost';
+  padding-left: 5px;
+  text-align: left;
+}
+p{
+  text-align: center;
+  width: 80%;
+  padding: 10px 10px 0px 10px;
+  font-family: 'Jost';
 }
